// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-typography - label prop should prioritize slot content over label prop 1`] = `
<modus-wc-typography label="Label text">
  <!---->
  <p class="modus-wc-text-md modus-wc-typography modus-wc-typography-weight-normal">
    Slot content
  </p>
</modus-wc-typography>
`;

exports[`modus-wc-typography - label prop should render label when slot content is only whitespace 1`] = `
<modus-wc-typography label="Label text">
  <!---->
  <p class="modus-wc-text-md modus-wc-typography modus-wc-typography-weight-normal">
    Label text
  </p>
</modus-wc-typography>
`;

exports[`modus-wc-typography - label prop should render with label prop when no slot content is provided 1`] = `
<modus-wc-typography label="Label text">
  <!---->
  <p class="modus-wc-text-md modus-wc-typography modus-wc-typography-weight-normal">
    Label text
  </p>
</modus-wc-typography>
`;

exports[`modus-wc-typography should render headings 1`] = `
<modus-wc-typography hierarchy="h1">
  <!---->
  <h1 class="modus-wc-text-md modus-wc-typography modus-wc-typography-weight-normal">
    Test content
  </h1>
</modus-wc-typography>
`;

exports[`modus-wc-typography should render with custom props 1`] = `
<modus-wc-typography custom-class="test-class" hierarchy="p" size="sm" weight="bold">
  <!---->
  <p class="modus-wc-text-sm modus-wc-typography modus-wc-typography-weight-bold test-class">
    Test content
  </p>
</modus-wc-typography>
`;

exports[`modus-wc-typography should render with default props 1`] = `
<modus-wc-typography>
  <!---->
  <p class="modus-wc-text-md modus-wc-typography modus-wc-typography-weight-normal">
    Test content
  </p>
</modus-wc-typography>
`;
